Diploma-Project-OLD/car-services-be/k8s/auth-service-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: nullchefo/auth-service
          ports:
            - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
    spring-boot: "true"
spec:
  ports:
    - port: 9002
      protocol: TCP
  selector:
    app: auth-service
  type: ClusterIP
